--- a/templates/baremetal.yml.j2
+++ b/templates/baremetal.yml.j2
@@ -3,6 +3,19 @@
 {% set after = unit.after | default(['network.target']) %}
 {% set service_section = unit.service | default({'Type': 'simple', 'ExecStart': '/usr/bin/true'}) %}
 {% set install_targets = unit.install_wanted_by | default(['multi-user.target']) %}
+{% set mounts_config = mounts | default({}) %}
+{% set ephemeral_mounts = mounts_config.ephemeral_mounts | default([]) %}
+{% set default_apply_targets = ['docker', 'podman', 'kubernetes', 'proxmox', 'baremetal'] %}
+{% set baremetal_tmpfs = namespace(items=[]) %}
+{% for mount in ephemeral_mounts %}
+  {% set apply_targets = mount.apply_to | default(default_apply_targets) %}
+  {% if 'baremetal' in apply_targets %}
+    {% set options = [] %}
+    {% if mount.size is defined %}{% set _ = options.append('size=' ~ mount.size) %}{% endif %}
+    {% if mount.mode is defined %}{% set _ = options.append('mode=' ~ mount.mode) %}{% endif %}
+    {% set _ = baremetal_tmpfs.items.append({'path': mount.path, 'options': options}) %}
+  {% endif %}
+{% endfor %}
 [Unit]
 Description={{ description }}
 {% for dependency in after %}
@@ -13,6 +26,11 @@ After={{ dependency }}
 {% for key, value in service_section.items() %}
 {{ key }}={{ value }}
 {% endfor %}
+{% if baremetal_tmpfs.items %}
+{% for mount in baremetal_tmpfs.items %}
+TemporaryFileSystem={{ mount.path }}{% if mount.options %}:{{ mount.options | join(',') }}{% endif %}
+{% endfor %}
+{% endif %}
 
 [Install]
 {% for target in install_targets %}
