--- a/templates/kubernetes.yml.j2
+++ b/templates/kubernetes.yml.j2
@@ -31,6 +31,7 @@
 {% endfor %}
 {% set secret_env = secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] %}
 {% set file_secrets = secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] %}
+{% set inline_env = service_env | default([]) %}
 {% set env_secret_name = svc_name + '-env' %}
 {% set file_secret_name = svc_name + '-files' %}
 {% set health_cmd = health.cmd | default(['true']) %}
@@ -130,7 +131,11 @@ spec:
                 - {{ cap }}
 {% endfor %}
 {% endif %}
+{% set has_secret_env = secret_env | length > 0 %}
+{% set has_inline_env = inline_env | length > 0 %}
+{% if has_secret_env or has_inline_env %}
           env:
+{% if has_secret_env %}
 {% for item in secret_env %}
             - name: {{ item.name }}
               valueFrom:
@@ -138,10 +143,14 @@ spec:
                   name: {{ env_secret_name }}
                   key: {{ item.name }}
 {% endfor %}
-{% for item in service_env | default([]) %}
+{% endif %}
+{% if has_inline_env %}
+{% for item in inline_env %}
             - name: {{ item.name }}
               value: {{ item.value }}
 {% endfor %}
+{% endif %}
+{% endif %}
           ports:
             - containerPort: {{ container_port }}
           volumeMounts:
